Fixed the header title sometimes wrapping if it was too long

--- a/style.css
+++ b/style.css
@@ -139,6 +139,9 @@ header a h1 {
 	height: 56px;
 	line-height: 56px;
 	margin: 0;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 /* Navigation bar */
